feat: upgrade to marketplace-grade template v2.0.0
- Add comprehensive SEO (meta tags, OpenGraph, Twitter Cards, JSON-LD)
- Add accessibility (skip link, ARIA labels, keyboard nav, reduced motion)
- Add dark/light mode toggle with localStorage persistence
- Add 6 documentation files (README, GETTING_STARTED, FEATURES, STACK, DEPLOY, CHANGELOG)
- Add MIT LICENSE
- Add ESLint + Prettier configuration
- Update CI/CD with lint job before deploy
- Improve responsive design and CSS organization

--- a/index.html
+++ b/index.html
@@ -4,71 +4,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kazi Musharraf | Profile</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Kazi Musharraf | Full-Stack Developer & AI Engineer</title>
+    <meta name="title" content="Kazi Musharraf | Full-Stack Developer & AI Engineer">
+    <meta name="description"
+        content="Full-Stack Developer with 6+ years of experience in React, Python, and AI automation. Building modern web applications and AI-powered solutions.">
+    <meta name="keywords"
+        content="full-stack developer, react developer, python developer, AI engineer, web developer, kazi musharraf">
+    <meta name="author" content="Kazi Musharraf">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://01-profile-readme.vercel.app/">
+    <meta property="og:title" content="Kazi Musharraf | Full-Stack Developer & AI Engineer">
+    <meta property="og:description"
+        content="Full-Stack Developer with 6+ years of experience in React, Python, and AI automation. Building modern web applications and AI-powered solutions.">
+    <meta property="og:image" content="https://01-profile-readme.vercel.app/og-image.png">
+    <meta property="og:site_name" content="Kazi Musharraf Portfolio">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://01-profile-readme.vercel.app/">
+    <meta name="twitter:title" content="Kazi Musharraf | Full-Stack Developer & AI Engineer">
+    <meta name="twitter:description"
+        content="Full-Stack Developer with 6+ years of experience in React, Python, and AI automation. Building modern web applications and AI-powered solutions.">
+    <meta name="twitter:image" content="https://01-profile-readme.vercel.app/og-image.png">
+    <meta name="twitter:creator" content="@mk_knight_23">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👨‍💻</text></svg>">
+
+    <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://github-readme-stats.vercel.app">
+    <link rel="preconnect" href="https://skillicons.dev">
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#0f172a">
+    <meta name="color-scheme" content="dark light">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Kazi Musharraf",
+        "url": "https://01-profile-readme.vercel.app/",
+        "image": "https://01-profile-readme.vercel.app/og-image.png",
+        "jobTitle": "Full-Stack Developer & AI Engineer",
+        "description": "Full-Stack Developer with 6+ years of experience in React, Python, and AI automation.",
+        "sameAs": [
+            "https://twitter.com/mk_knight_23",
+            "https://instagram.com/kazi_musharraf_01",
+            "https://linkedin.com/in/mk-knight-1373271b8",
+            "https://github.com/mk-knight23"
+        ],
+        "knowsAbout": ["React", "Python", "TypeScript", "AI Automation", "Full-Stack Development"]
+    }
+    </script>
+
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body class="dark-mode">
-    <div class="background-blobs">
+    <!-- Skip Link for Accessibility -->
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+
+    <!-- Theme Toggle -->
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode" title="Toggle theme">
+        <span class="theme-icon" aria-hidden="true">🌙</span>
+    </button>
+
+    <div class="background-blobs" aria-hidden="true">
         <div class="blob blob-1"></div>
         <div class="blob blob-2"></div>
         <div class="blob blob-3"></div>
     </div>
 
-    <main class="container">
+    <main id="main-content" class="container">
         <header class="glass-panel profile-header fade-in">
             <div class="profile-info">
                 <h1>Hi, I'm <span class="gradient-text">KAZI MUSHARRAF</span></h1>
                 <div class="typing-container">
                     <img src="https://readme-typing-svg.herokuapp.com?font=Outfit&pause=1000&color=a78bfa&center=false&vCenter=true&width=435&lines=Full-Stack+Developer;Web+and+Mobile+Master;AI+Automation+Engineer;Always+Learning"
-                        alt="Typing SVG">
+                        alt="Rotating text: Full-Stack Developer, Web and Mobile Master, AI Automation Engineer, Always Learning"
+                        loading="lazy">
                 </div>
             </div>
         </header>
 
-        <section class="glass-panel stats-section fade-in delay-1">
-            <h2>📊 GitHub Analytics</h2>
+        <section class="glass-panel stats-section fade-in delay-1" aria-labelledby="stats-heading">
+            <h2 id="stats-heading">📊 GitHub Analytics</h2>
             <div class="stats-grid">
                 <img src="https://github-readme-stats.vercel.app/api?username=mk-knight23&show_icons=true&theme=transparent&hide_border=true&title_color=a78bfa&text_color=e2e8f0&icon_color=a78bfa"
-                    alt="GitHub Stats">
+                    alt="GitHub stats showing contributions, commits, and stars" loading="lazy">
                 <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=mk-knight23&layout=compact&theme=transparent&hide_border=true&title_color=a78bfa&text_color=e2e8f0"
-                    alt="Top Languages">
+                    alt="Top programming languages used: JavaScript, TypeScript, Python, and more" loading="lazy">
             </div>
             <div class="summary-card">
                 <img src="https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=mk-knight23&theme=nord_dark"
-                    alt="Profile Details">
+                    alt="GitHub profile summary showing contribution graph and activity" loading="lazy">
             </div>
         </section>
 
-        <section class="glass-panel tech-stack fade-in delay-2">
-            <h2>🛠️ Tech Stack</h2>
+        <section class="glass-panel tech-stack fade-in delay-2" aria-labelledby="tech-heading">
+            <h2 id="tech-heading">🛠️ Tech Stack</h2>
             <div class="skills-grid">
                 <img src="https://skillicons.dev/icons?i=react,vue,python,ts,aws,cs,django,tailwind,mui,graphql,mongodb,nodejs,github,git,flutter&perline=8"
-                    alt="My Skills">
+                    alt="Technology skills: React, Vue, Python, TypeScript, AWS, C#, Django, Tailwind, Material UI, GraphQL, MongoDB, Node.js, GitHub, Git, Flutter"
+                    loading="lazy">
             </div>
         </section>
 
-        <section class="glass-panel about-me fade-in delay-3">
-            <h2>⚡ About Me</h2>
-            <ul class="about-list">
-                <li><span class="icon">💻</span> <strong>6+ Years</strong> in Full Stack Development</li>
-                <li><span class="icon">🌱</span> Learning <strong>Advanced AI Agents</strong> & LLMs</li>
-                <li><span class="icon">🥅</span> <strong>2026 Goals</strong>: Build AI VIBE Apps</li>
-                <li><span class="icon">⚡</span> Sci-fi fan & <strong>AI Automation</strong> Enthusiast</li>
+        <section class="glass-panel about-me fade-in delay-3" aria-labelledby="about-heading">
+            <h2 id="about-heading">⚡ About Me</h2>
+            <ul class="about-list" role="list">
+                <li><span class="icon" aria-hidden="true">💻</span> <strong>6+ Years</strong> in Full Stack Development
+                </li>
+                <li><span class="icon" aria-hidden="true">🌱</span> Learning <strong>Advanced AI Agents</strong> & LLMs
+                </li>
+                <li><span class="icon" aria-hidden="true">🥅</span> <strong>2026 Goals</strong>: Build AI VIBE Apps</li>
+                <li><span class="icon" aria-hidden="true">⚡</span> Sci-fi fan & <strong>AI Automation</strong>
+                    Enthusiast</li>
             </ul>
         </section>
 
         <footer class="footer fade-in delay-4">
-            <div class="social-links">
-                <a href="https://twitter.com/mk_knight_23" target="_blank" class="social-icon">Twitter</a>
-                <a href="https://instagram.com/kazi_musharraf_01" target="_blank" class="social-icon">Instagram</a>
-                <a href="https://linkedin.com/in/mk-knight-1373271b8" target="_blank" class="social-icon">LinkedIn</a>
-            </div>
+            <nav class="social-links" aria-label="Social media links">
+                <a href="https://twitter.com/mk_knight_23" target="_blank" rel="noopener noreferrer" class="social-icon"
+                    aria-label="Follow on Twitter">
+                    <span aria-hidden="true">𝕏</span> Twitter
+                </a>
+                <a href="https://instagram.com/kazi_musharraf_01" target="_blank" rel="noopener noreferrer"
+                    class="social-icon" aria-label="Follow on Instagram">
+                    <span aria-hidden="true">📷</span> Instagram
+                </a>
+                <a href="https://linkedin.com/in/mk-knight-1373271b8" target="_blank" rel="noopener noreferrer"
+                    class="social-icon" aria-label="Connect on LinkedIn">
+                    <span aria-hidden="true">💼</span> LinkedIn
+                </a>
+                <a href="https://github.com/mk-knight23" target="_blank" rel="noopener noreferrer" class="social-icon"
+                    aria-label="View GitHub profile">
+                    <span aria-hidden="true">🐙</span> GitHub
+                </a>
+            </nav>
             <p class="visitor-count">
-                <img src="https://visitor-badge.laobi.icu/badge?page_id=mk-knight23.mk-knight23" alt="Visitors">
+                <img src="https://visitor-badge.laobi.icu/badge?page_id=mk-knight23.mk-knight23"
+                    alt="Visitor count badge" loading="lazy">
+            </p>
+            <p class="template-credit">
+                <a href="https://github.com/mk-knight23/01-profile-readme" target="_blank" rel="noopener noreferrer"
+                    class="fork-link">
+                    ⭐ Star this template
+                </a>
+                <span class="separator" aria-hidden="true">•</span>
+                <a href="https://github.com/mk-knight23/01-profile-readme/fork" target="_blank"
+                    rel="noopener noreferrer" class="fork-link">
+                    🍴 Fork this template
+                </a>
             </p>
         </footer>
     </main>
